# cpp

./: CMakeLists.txt
algo/: delete_doublons.cpp  easy_string_operations.cpp  missing_elements.cpp  monotonic_datas.cpp
algo/euler/: euler.h  euler1.cpp  euler2.cpp  euler3.cpp  euler4.cpp
algo/search_algorithms/: dichotomic_search.cpp  linear_search.cpp
algo/sorting_algorithms/: bubble_sort.cpp  quick_sort.cpp  selection.cpp
src/: arrow_operator.cpp  casting.cpp  copy.cpp  function_pointers.cpp  iterators.cpp  macros.cpp  making_an_array.cpp  move_semantics.cpp  parameters_evaluation_order.cpp  singletons.cpp  static.cpp  string_optimization.cpp  structured_bindings.cpp  templates.cpp  test.cpp  threads_and_chrono.cpp  track_memory_allocation.cpp  type_punning.cpp  unions.cpp  variants.cpp  vectors.cpp  virtual_destructors.cpp
